adds description of assignment. V1.02

--- a/index.html
+++ b/index.html
@@ -87,6 +87,19 @@
 		<p>
 		Polaroid iPhone plaid, Pitchfork Shoreditch paleo. Hashtag keytar chia scenester Pinterest, semiotics tousled food truck. YOLO scenester deep v, taxidermy paleo quinoa McSweeney's Carles VHS mustache Williamsburg gluten-free readymade cold-pressed. Truffaut Thundercats Schlitz, listicle organic Brooklyn paleo squid asymmetrical readymade migas gluten-free Austin. Etsy Wes Anderson 8-bit retro, polaroid synth paleo banh mi before they sold out Vice. Bushwick fap Intelligentsia, whatever Etsy High Life Kickstarter migas retro Banksy YOLO Carles yr raw denim. Gluten-free fixie taxidermy pop-up, actually Kickstarter flannel put a bird on it master cleanse.
 		</p>
+		<p>Hello, my name is Dien. This website is to showcase my use of HTML/CSS and Javascript to create a website that changes in color and other contents for each day of the week. The conent includes:</p>
+		<p></p>
+
+		<p>
+			<ul>
+				<li>image (a pic of the coffee)</li>
+				<li>alt (a description of the pic for people who can't see it)</li>
+				<li>description (a note about the coffee)</li>
+				<li>weekday that corresponds with the day of the week</li>
+				<li>color (to support the coffee)</li>
+			</ul>
+		</p>
+
 		<p>
 		Text provided by <a href="http://hipsum.co/" target="_blank">Hipster Ipsum</a>
 		</p>
